Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextRetNumObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
