Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjTextRetNumObjFail.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
